# CW5

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  ten_employers.json
src/: config.py  user_interaction.py
src/api_clients/: base.py  entities.py  hh_client.py
src/cli/: __init__.py  init_db.py  search_employers.py
src/db/: loader.py  migrations.py
src/db/managers/: __init__.py  base.py  pg_db_managers.py
src/migrations/: 002_create_vacancies_table.sql
